fix show page on mobiles, fix some img, icon not show on page

--- a/src/components/BurgerMenu.css
+++ b/src/components/BurgerMenu.css
@@ -1,11 +1,11 @@
-@media (max-width: 480px) {
+@media (max-width: 758px) {
   .row {
     width: auto;
     min-width: 100px;
   }
 }
 
-.card {
+.burger-card {
     background: #333;
     padding: 15px 25px;
     border-radius: 15px;
@@ -13,17 +13,14 @@
     cursor: pointer;
     transition: 0.5s ease;
     width: fit-content;
-    position: absolute;
-    left: 70%;
-    top: 20px;
+    right: 20px;
+    top: 10px;
+    position: fixed;
 }
 
-.card.show {
+.burger-card.show {
     padding-bottom: 20px;
-    position: absolute;
-    left: 70%;
-    top: 20px;
-    
+    top: 30px;
 }
 
 
@@ -45,7 +42,7 @@
   padding-left: 5px;
 }
 
-.card.show .menu-content {
+.burger-card.show .menu-content {
   max-height: 300px;
   opacity: 1;
 }
@@ -68,25 +65,32 @@
   color: white;
 }
 
-.icon {
+.burger-icon {
   stroke: white;
   stroke-width: 8;
   stroke-linecap: round;
   transition: 0.35s ease;
 }
 
-.icon.open .path1 {
+.burger-icon.open .path1 {
     transform: translateY(20px) rotate(45deg);
     transform-origin: 50% 50%;
 }
 
-.icon.open .path2 {
+.burger-icon.open .path2 {
     opacity: 0;
 }
 
-.icon.open .path3 {
+.burger-icon.open .path3 {
     transform: translateY(-10px) rotate(-45deg);
     transform-origin: 50% 50%;
+}
+
+.burger-icon path {
+  stroke: white;
+  stroke-width: 8;
+  stroke-linecap: round;
+  transition: all 0.4s cubic-bezier(0.68, -0.6, 0.32, 1.6);
 }
 
 .hr-line {
